feat: add SSM models